[package]
name = "axum_warp_compatibility"
version = "0.1.0"
edition = "2021"
description = "Proof of concept for converting between Axum and Warp request/response types enabling a single server to handle both types of routes."

[lib]
name = "axum_warp_compatibility"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
hyper = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
futures = "0.3"

[dev-dependencies]
bytes = "1.0"
serde_json = "1.0"
