[package]
name = "axum_warp_compat"
version = "0.1.0"
edition = "2021"
description = "Proof of concept for converting between Axum and Warp request/response types enabling a single server to handle both types of routes."

[lib]
name = "axum_warp_compat"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
futures = "0.3"
tower = "0.5"
warp = "0.3"

[dev-dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-stream = "0.1"
